Fix overflow-x for grid elements in text slug page

--- a/pages/texts/textsStyles.module.css
+++ b/pages/texts/textsStyles.module.css
@@ -1,36 +1,29 @@
-.txt-header {
-  margin-bottom: 1.5rem;
-}
-
-.txt-title {
-  margin-bottom: 0;
-  max-width: 500px;
-}
-
-.txt-note {
-  font-size: small;
+.txt-header,
+.txt-body {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  row-gap: 1rem;
 }
 
 .txt-header,
-.txt-body {
-  display: grid;
-  gap: 1rem;
+.txt-body > div {
+  overflow-x: auto;
 }
 
 @media (min-width: 576px) {
   .txt-header,
   .txt-body {
-    grid-template-columns: repeat(4, 1fr);
+    display: grid;
+    grid-template-columns: 0.8fr 3.2fr;
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .txt-header,
+  .txt-body {
+    grid-template-columns: 1fr 3fr;
     gap: 2rem;
-  }
-
-  .txt-date-n-type,
-  .txt-note {
-    grid-column: span 1;
-  }
-
-  .txt-title,
-  .txt-content {
-    grid-column: span 3;
   }
 }
