--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,6 @@ h3 {
 
 h1 {
   font-size: x-large;
-  font-weight: lighter;
   -webkit-font-smoothing: antialiased;
   margin: 0 0 1.5em 0;
 }
@@ -81,6 +80,10 @@ button {
 
 .sans {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.small {
+  font-size: small;
 }
 
 .hidden {
